Bug 624781. When converting from app units to pixels use an intermediate double to do the calculation so no precision is lost. r=roc a=blocking